tests/netgen/spider/errors/arm_number_2/options.netgen
--spider --arms=2 -o net.net.xml
